--- a/djangosql/templates/sqlservertester/home.html
+++ b/djangosql/templates/sqlservertester/home.html
@@ -1,9 +1,34 @@
 
 
-<h3>账号数据</h3>
-<a>账号ID：{{ user_id}}</a><br>
+<h3>账号数据（13551002117）</h3>
+<a>--手机账号--</a><br>
+{% if user_id == "还没有建立账号！" %}
+    <a>账号ID：<font size="3" color="#ff4500">{{ user_id}}</font></a><br>
+{% else %}
+    <a>账号ID：{{ user_id}}</a><br>
+{% endif %}
 <a>推荐者ID：{{ suggest_user_id}}</a><br>
 <a>昵称：{{ nickname}}</a><br>
 <a>注册手机号：{{ mobile}}</a><br>
-<a>最新的手机验证码：{{ member_sms}}</a><br>
-<a>是否绑定微信：{{ wechat_user}} （备注：1表示绑定，0表示未绑定）</a><br>
+<a>最新的手机验证码：<font size="3" color="silver">{{ member_sms}}</font></a><br>
+<a>账号中目前的剩余金额：<font size="3" color="#1e90ff">{{ member_finance}}</font> 元</a><br>
+<a>账号累计的订单数量：{{ oil_order_count}}</a><br>
+<a></a><br>
+<a>--微信账号--</a><br>
+{% if wechat_user != 0 and wechat_user != 1 %}
+    <a>是否关注微信公众号：<font size="3" color="#8b0000">{{ wechat_user}} </font>（备注：1表示关注，0表示未关注）</a><br>
+{% else %}
+    <a>是否关注微信公众号：{{ wechat_user}} （备注：1表示关注，0表示未关注）</a><br>
+{% endif %}
+{% if weixin_union_id != NULL and weixin_union_id != '--' %}
+    <a>微信是否已绑定手机：是</a><br>
+{% else %}
+    <a>微信是否已绑定手机：<font size="3" color="#8b0000">亲，微信还未与手机绑定！</font></a><br>
+{% endif %}
+
+<p>------------------------------------------------------------------------------------------------------</p>
+
+<h4>账号优惠券信息（13551002117）</h4>
+
+<a></a><br>
+    <a>TEST：{{ test }}</a><br>
