--- a/djangosql/templates/sqlservertester/home.html
+++ b/djangosql/templates/sqlservertester/home.html
@@ -1,6 +1,6 @@
 
 
-<h3>账号数据（13551002117）</h3>
+<h3>账号数据：{{ persion }}</h3>
 <a>--手机账号--</a><br>
 {% if user_id == "还没有建立账号！" %}
     <a>账号ID：<font size="3" color="#ff4500">{{ user_id}}</font></a><br>
@@ -159,7 +159,6 @@
     {% endfor %}
 </table>
 
-<a>{{ oil_order_pay_sum }}</a>
 
 
 
