--- a/modeltest/templates/displayweb.html
+++ b/modeltest/templates/displayweb.html
@@ -25,24 +25,31 @@
             <a>{{ testbegin }}</a>
             <br/>
             <br/>
-            <a>{{ soccersite_list }}</a><br/>
-            <a>{{ soccersite_list_test }}</a>
-{#            <a>{{ result_test }}</a><br/>#}
-            <a>{{ lng }}</a><br/>
-            <a>{{ lat }}</a><br/>
         </div>
 
         <script>
+
             var map = new BMap.Map("container");// 创建地图实例
             var point = new BMap.Point({{ coordinate_chengdu.0 }}, {{ coordinate_chengdu.1 }});// 创建成都坐标
             map.centerAndZoom(point, 11);// 初始化地图，设置中心点坐标和地图级别
             map.enableScrollWheelZoom(true);//鼠标缩放地图
             var mapStyle={  style : "normal" }//地图模板选择
             map.setMapStyle(mapStyle);//实现地图模板
+            {##}
+            {#var point_site = new BMap.Point({{ coordinate_point.0 }},{{ coordinate_point.1 }})//创建site坐标#}
+            {#var marker = new BMap.Marker(point_site);// 创建标注#}
+            {#map.addOverlay(marker); //实现标记#}
 
-            var point_site = new BMap.Point({{ lng }},{{ lat }})//创建site坐标
-            var marker = new BMap.Marker(point_site);// 创建标注
-            map.addOverlay(marker); //实现标记
+            //批量标注
+            var coordinate_points = "{{ coordinate_points }}"
+            var coordinate_points_json = coordinate_points.replace(/\&quot;/g, '\"');
+            var coordinate_points_json_result = JSON.parse(coordinate_points_json);
+
+            for(var i=0;i<coordinate_points_json_result.length;i++){
+                var points = new BMap.Point(coordinate_points_json_result[i][0], coordinate_points_json_result[i][1]); // 创建点
+                var markers = new BMap.Marker(points);// 创建标注
+                map.addOverlay(markers);    //增加点
+             }
 
         </script>
 
