--- a/baidumap/fivesites/templates/index.html
+++ b/baidumap/fivesites/templates/index.html
@@ -64,22 +64,52 @@
         {#var label = new BMap.Label("{{ fivesit_name_only }}", {offset:new BMap.Size(-10,-20)})#}
         {#marker.setLabel(label)#}
 
-        //多地址显示
+        //多地址显示坐标点
         var coordinate_points = "{{ coordinate_points }}"
         var coordinate_points_json = coordinate_points.replace(/\&quot;/g, '\"');
         var coordinate_points_json_result = JSON.parse(coordinate_points_json);
-
+        //多地址显示名称
         var coordinate_names = "{{ fivesite_name_many }}"
         var coordinate_names_json = coordinate_names.replace(/\[|\]|\&|quot;/g,'')
         var coordinate_names_split = coordinate_names_json.split(",")
-
+        //多地址显示概述
+        var fivesite_sum_result = "{{ fivesite_sum_result }}"
+        var fivesite_sum_result_json = fivesite_sum_result.replace(/\[|\]|\&|quot;/g,'')
+        var fivesite_sum_result_split = fivesite_sum_result_json.split(",")
+        //概述框
+        var opts = {
+            width : 250,
+            height : 260,
+            title: "信息概览"
+        }
+        messages_arr = []
+        markers_arr = []
+        //循环展示
         for(var i=0;i<coordinate_points_json_result.length;i++){
             var points = new BMap.Point(coordinate_points_json_result[i][0], coordinate_points_json_result[i][1]); // 创建点
             var markers = new BMap.Marker(points);// 创建标注
             map.addOverlay(markers);    //增加点
-            var label = new BMap.Label(coordinate_names_split[i], {offset:new BMap.Size(-10,-20)})
+            var label = new BMap.Label(coordinate_names_split[i], {offset:new BMap.Size(-10,-20)})// 增加标签
             markers.setLabel(label)
-         }
+            //增加概述
+            var four_k = i*4
+            var messages = '<ul class="list-group">'+
+                    '<li class="list-group-item">'+'人均消费：￥'+ fivesite_sum_result_split[four_k] +'</li>'+
+                    '<li class="list-group-item">'+'联系电话：'+ fivesite_sum_result_split[four_k+1] +'</li>'+
+                    '<li class="list-group-item">'+'场地数量：'+ fivesite_sum_result_split[four_k+2] +'</li>'+
+                    '<li class="list-group-item">'+'营业时间：'+ fivesite_sum_result_split[four_k+3] +'</li>'+
+                    '</ul>'
+            messages_list = messages_arr.concat(messages)
+            messages_arr = messages_list
+
+            var infoWindow = new BMap.InfoWindow(messages_arr[i], opts)
+            console.log(infoWindow)
+            markers.addEventListener("click", function () {
+                this.openInfoWindow(infoWindow, points)
+            })
+        }
+
+
 	</script>
 	<div class="main">
       	<div class="content-top" id="fea">
