解决信息栏不能自动选择相关内容的问题

--- a/baidumap/fivesites/templates/index.html
+++ b/baidumap/fivesites/templates/index.html
@@ -78,12 +78,12 @@
         var fivesite_sum_result_split = fivesite_sum_result_json.split(",")
         //概述框
         var opts = {
-            width : 250,
-            height : 260,
+            width : 300,
+            height : 300,
             title: "信息概览"
         }
         messages_arr = []
-        markers_arr = []
+        var messages_obj = new Object()
         //循环展示
         for(var i=0;i<coordinate_points_json_result.length;i++){
             var points = new BMap.Point(coordinate_points_json_result[i][0], coordinate_points_json_result[i][1]); // 创建点
@@ -92,23 +92,25 @@
             var label = new BMap.Label(coordinate_names_split[i], {offset:new BMap.Size(-10,-20)})// 增加标签
             markers.setLabel(label)
             //增加概述
-            var four_k = i*4
+            var four_k = i*5
             var messages = '<ul class="list-group">'+
-                    '<li class="list-group-item">'+'人均消费：￥'+ fivesite_sum_result_split[four_k] +'</li>'+
+                    '<li class="list-group-item">'+'</li>'+
+                    '<li class="list-group-item">'+'单飞平均消费：￥'+ fivesite_sum_result_split[four_k] +'</li>'+
                     '<li class="list-group-item">'+'联系电话：'+ fivesite_sum_result_split[four_k+1] +'</li>'+
-                    '<li class="list-group-item">'+'场地数量：'+ fivesite_sum_result_split[four_k+2] +'</li>'+
+                    '<li class="list-group-item">'+'场地数量：'+ fivesite_sum_result_split[four_k+2] + '个'+'</li>'+
                     '<li class="list-group-item">'+'营业时间：'+ fivesite_sum_result_split[four_k+3] +'</li>'+
+                    '<li class="list-group-item">'+'场地消费：￥'+ fivesite_sum_result_split[four_k+4] +'</li>'+
                     '</ul>'
-            messages_list = messages_arr.concat(messages)
-            messages_arr = messages_list
-
-            var infoWindow = new BMap.InfoWindow(messages_arr[i], opts)
-            console.log(infoWindow)
+            //概述对象赋值
+            messages_obj[i] = messages
+            markers.setTitle(i)//设置一个定位标志，用于确认marker是哪个
             markers.addEventListener("click", function () {
+                var infoWindow = new BMap.InfoWindow(messages_obj[this.getTitle()], opts)
                 this.openInfoWindow(infoWindow, points)
+                console.log(this.getTitle())
             })
         }
-
+        console.log(messages_obj)
 
 	</script>
 	<div class="main">
