--- a/baidumap/fivesites/templates/index.html
+++ b/baidumap/fivesites/templates/index.html
@@ -13,9 +13,9 @@
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak={{ my_ak }}"></script>
 
 <style type="text/css">  
-        html{height:100%}  
-        body{height:100%;margin:0px;padding:0px}  
-        #map{height:70%;width:80%;margin:5px auto;} 
+        html{height:100%}
+        body{height:100%;margin:0px;padding:0px}
+        #map{height:70%;width:70%;margin:5px auto}
 </style> 
 
 </head>
@@ -37,10 +37,12 @@
 		  </div>
 	</div>
 	<br>
-	<!--map-->
-    <div></div>
-	<div id="map">	
-	</div>
+
+        <!--map-->
+        <div></div>
+        <div id="map">
+        </div>
+
     <!--datalink-->
     <script>
         var chengdupoint = new Array({{ coordinate_chengdu.0 }}, {{ coordinate_chengdu.1 }}) //成都坐标
